src/test/resources/org/nest/nestml/_cocos/valid/neuronWithMultipleOrNoInput.nestml
neuron neuronWithInput:
  input:
    spikes <- spike

  end
end
